--- a/ressources/bibtex/Zheng2018.bib
+++ b/ressources/bibtex/Zheng2018.bib
@@ -5,7 +5,8 @@
   volume={107},
   pages={55--71},
   year={2018},
-  publisher={Elsevier}
+  publisher={Elsevier},
   doi={https://doi.org/10.1016/j.micron.2018.01.010},
   url={https://www.sciencedirect.com/science/article/pii/S0968432817303037}
 }
+
