Added DCT approach article!

--- a/PFE/latex/main.bib
+++ b/PFE/latex/main.bib
@@ -52,7 +52,16 @@ isbn="978-3-030-44584-3"
   year={2011}
 }
 
-@Article{Kouzehkanan2022,
+@article{guiliang2016microscopic,
+  title={Microscopic Cell Image Segmentation and Counting Algorithm Based on Image Definition.},
+  author={Guiliang, FENG and Yiping, LU and Wei, PENG},
+  journal={International Journal of Simulation--Systems, Science \& Technology},
+  volume={17},
+  number={38},
+  year={2016}
+}
+
+﻿@Article{Kouzehkanan2022,
 author={Kouzehkanan, Zahra Mousavi
 and Saghari, Sepehr
 and Tavakoli, Sajad
