--- a/PFE/latex/main.tex
+++ b/PFE/latex/main.tex
@@ -14,6 +14,7 @@
 \usepackage[utf8x]{inputenc}
 \usepackage{amsmath}
 \usepackage{caption}
+\usepackage{adjustbox}
 %\usepackage[a4paper,margin=0.5in]{geometry}
 \usepackage[a4paper,%
             left=2cm,right=2cm,top=1cm,bottom=1cm,%
