--- a/PFE/latex/main.bib
+++ b/PFE/latex/main.bib
@@ -31,6 +31,17 @@ isbn="978-3-030-44584-3"
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+@article{ahmed1974discrete,
+  title={Discrete cosine transform},
+  author={Ahmed, Nasir and Natarajan, T\_ and Rao, Kamisetty R},
+  journal={IEEE transactions on Computers},
+  volume={100},
+  number={1},
+  pages={90--93},
+  year={1974},
+  publisher={IEEE}
+}
+
 @article{bhavnani2016segmentation,
   title={Segmentation and counting of WBCs and RBCs from microscopic blood sample images},
   author={Bhavnani, Lata A and Jaliya, Udesang K and Joshi, Mahasweta J},
