--- a/PFE/latex/chap1.tex
+++ b/PFE/latex/chap1.tex
@@ -5,7 +5,7 @@
 \section{Related Work}
 \vspace{0.2in}
 \hspace*{0.16in}
-Blood cell segmentation is the extraction of different blood cells from microscopic images. Blood cell counting is the process of counting the detected blood cells after segmentation. Many researchers have implemented methods for segmentation and counting of blood cells using different approach's. In this section we devise the methods according to the segmentation approach.
+Blood cell segmentation is the extraction of different blood cells from microscopic images. Blood cell counting is the process of counting the detected blood cells after segmentation. Many researchers have implemented methods for segmentation and counting of blood cells using different approaches. In this section we devise the methods according to the segmentation approach.
 
 \subsection{Image Processing Approaches}
 
