Added general introduction.

--- a/PFE/latex/main.tex
+++ b/PFE/latex/main.tex
@@ -378,12 +378,25 @@ Keywords: CNN, cell segmentation, cell counting, convolutional neural networks
 \begin{center}
     {\color{Black} \rule{6.2in}{1.4mm} }\\
     \vspace{0.1in}
-    \scshape{\fontsize{34}{46}{\bfseries{\color{Black}{Introduction générale}}}}
+    \scshape{\fontsize{34}{46}{\bfseries{\color{Black}{General Introduction}}}}
     \\
     \vspace{0.5in}
 \end{center}
-\addcontentsline{toc}{chapter}{\vspace{-0.12in}\color{Black}{Introduction générale}}
+\addcontentsline{toc}{chapter}{\vspace{-0.12in}\color{Black}{General Introduction}}
 \hspace*{0.16in}
+
+Blood carries out many vital functions as it circulates through the body. It transports oxygen from the lungs to other body tissues and carries away carbon dioxide. It carries nutrients from the digestive system to the cells of the body, and carries away wastes for excretion by the kidneys. Blood helps our body fight off infectious agents and inactivates toxins, stops bleeding through its clotting ability, and regulates our body temperature. Doctors rely on many blood tests to diagnose and monitor diseases. Some tests measure the components of blood itself; others examine substances found in the blood to identify abnormal functioning of various organs. Hence, we here propose a software system which will assist pathologists to detect blood cell count and help to find out the diseases. This information can be very helpful to a physician who, for example, is trying to identify the cause of a patient's diseases.
+
+Earlier hematologists were performing microscopic Copied selected text to selection primary: examination and counting of blood cells manually, which  was very time-consuming and tedious process. Also, the accuracy of counting mainly depends on their expertise skill and their physical conditions, and because of cells complex nature, it still remains a challenging task to segment cells from its background and count them automatically.\\
+<--- --->\\
+
+This thesis is presented in four chapters:\\
+
+\textbf{Chapter 1 State of the art:}\\
+\textbf{Chapter 2 Elaboration, Conception of multiple architecture and comparative study:}\\
+\textbf{Chapter 3 Dataset collection:}\\
+\textbf{Chapter 4 Implementation and experiments:}\\
+
 
 \newpage
 
